[update to 0.770] Don't crash if module shadows special library module such as "typing" (#8405)
Anthony Sottile (2):
      Fix mypy pretty output within a pty (#8145)
      Add GitHub Actions for testing windows (#8327)

Cohen Karnell (1):
      Allow redefining TypedDict keys while still throwing an error (#8109)

Denys Halenok (2):
      Add new error code for unreachable errors (#8312)
      Report an error if final class has abstract attributes (#8332)

Ethan Smith (1):
      Pin pytest (#8308)

FooTaGe (1):
      Update builtin_types reflect bool subclass of int (#8346)

HeShan (1):
      Ignore files passed to dmypy start  (#8133)

Ivan Levkivskyi (2):
      Fix erorrs in self-check related to pytest (#8418)
      Sync typeshed (#8448)

Jacob Beck (2):
      Fix bugs where overriding init in a dataclass subclass crashed mypy (#8159)
      dataclasses: Fix deeply nested InitVar definitions with init=False (#8208)

Jakub Stasiak (1):
      Support typing.Annotated on top of typing_extensions.Annotated (#8371)

Jan Verbeek (2):
      Support determining whether a literal is truthy (#8368)
      Analyze descriptor methods as if they're methods, not functions (#8365)

Jukka Lehtosalo (36):
      [mypyc] Force type error helper to not be inlined (#8154)
      Bump version to 0.770+dev (#8163)
      Support type inference for defaultdict() (#8167)
      Remove dead code (#8168)
      Infer type from "x.extend(y)" where y has type Any (etc.) (#8169)
      Attempt to fix a crash related to partial defaultdict types (#8170)
      Allow 'in' operations with partial types (#8177)
      Simplify default test stubs to speed up tests slightly (#8179)
      Support partial type inference with += and |= (#8183)
      Further speed up tests (#8188)
      Reduce Travis parallelism (#8195)
      Only run Travis tests on Python 3.7 once (compiled) (#8196)
      Tests: run self check and lint in parallel (#8189)
      Tests: correctly mark which tests are slow (#8197)
      Run 3.5

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v0.761/mypy-0.761.tar.gz
+url = https://github.com/python/mypy/archive/v0.770/mypy-0.770.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
