--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v0.770/mypy-0.770.tar.gz
+url = https://github.com/python/mypy/archive/v0.780/mypy-0.780.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
