mypy: Autospec creation for update from version 0.982 to version 0.990
Alex Waygood (15):
      Run a type check on `scripts` and most of `misc` in CI (#13458)
      Allow `ParamSpecArgs` to be unpacked (#13459)
      Remove remaining type comments in favour of PEP 526 annotations (#13454)
      Modernize a few `Counter`/`DefaultDict` annotations (#13463)
      Remove some unnecessary imports of `typing.Type` (#13469)
      Add `types-psutil` as a build requirement (#13470)
      Use `--strict` for selfcheck (#13464)
      Don't skip flake8 for the `misc` directory (#13533)
      selfcheck: enable the `ignore-without-code` error code (#13534)
      Remove F821 from the flake8 ignorelist (#13553)
      Bump `flake8` test dependencies; remove `importlib_metadata` as a test dependency (#13555)
      selfcheck: Enable the `redundant-expr` error code (#13547)
      `MYPYPATH`: Improve docs for those running on Windows (#13622)
      Update pos-only unit tests for Python 3.10.7 (#13660)
      Fall back to FORCE_COLOR environment variable if MYPY_FORCE_COLOR is not present (#13814)

Bas van Beek (1):
      Avoid deprecated `importlib.resources.path` function (#13783)

Ben Raz (1):
      Remove typed_ast tests requirement (#13840)

Chad Dombrova (1):
      stubgenc: Introduce an object-oriented system for extracting function signatures (#13473)

David Runge (1):
      Add install-types extra that depends on pip (#13739)

Ethan Smith (4):
      Sync typeshed (#13457)
      [mypyc] Add support for building mypyc code on WASM (#13446)
      Don't run test suite on 32bit Windows (#13672)
      Support building mypycified mypy with PEP517 interface (#13445)

Ilya Konstantinov (1):
      Fix __set__ to __get__ in messages (#13913)

Ivan Levkivskyi (44):
      Fix overload overlap check for UninhabitedType (#13461)
      Fall back to satisfiable constraints in unions (#13467)
      Allow overriding attribute with a settable property (#13475)
      Allow using TypedDict for more pr

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v0.982/mypy-0.982.tar.gz
+url = https://github.com/python/mypy/archive/v0.990/mypy-0.990.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
