--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v1.1.1/mypy-1.1.1.tar.gz
+url = https://github.com/python/mypy/archive/v1.2.0/mypy-1.2.0.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
