--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v1.2.0/mypy-1.2.0.tar.gz
+url = https://github.com/python/mypy/archive/v1.3.0/mypy-1.3.0.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -60,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
