mypy: Autospec creation for update from version 1.10.0 to version 1.10.1
commit c28b5257b528f65a028e7d0dbecbcd81c7997356
Author: Shantanu <12621235+hauntsaninja@users.noreply.github.com>
Date:   Sat Jun 22 23:44:33 2024 -0700

    [1.10 backport] Fix error reporting on cached run after uninstallation of third party library (#17422)

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v1.10.0/mypy-1.10.0.tar.gz
+url = https://github.com/python/mypy/archive/v1.10.1/mypy-1.10.1.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
