--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v1.11/mypy-1.11.tar.gz
+url = https://github.com/python/mypy/archive/v1.11.1/mypy-1.11.1.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = false
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
