--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = mypy
-url = https://github.com/python/mypy/archive/v1.15.0/mypy-1.15.0.tar.gz
+url = https://github.com/python/mypy/archive/v1.16.0/mypy-1.16.0.tar.gz
 archives = 
 giturl = https://github.com/python/mypy.git
 domain = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
